This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Incorrect reference counting in _ssl.c's _servername_callback()
Type: behavior Stage: resolved
Components: Extension Modules, SSL Versions: Python 3.10, Python 3.9, Python 3.8
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: christian.heimes Nosy List: ZackerySpytz, christian.heimes, miss-islington
Priority: normal Keywords: patch

Created on 2020-07-09 03:53 by ZackerySpytz, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 21407 merged ZackerySpytz, 2020-07-09 03:56
PR 21410 merged miss-islington, 2020-07-09 10:00
PR 21411 merged miss-islington, 2020-07-09 10:00
Messages (5)
msg373371 - (view) Author: Zackery Spytz (ZackerySpytz) * (Python triager) Date: 2020-07-09 03:53
In _servername_callback(), servername_bytes will be used after being
decrefed if PyUnicode_FromEncodedObject() fails.
msg373389 - (view) Author: miss-islington (miss-islington) Date: 2020-07-09 10:00
New changeset ee96f32ca24779656d3c8736d26671fc3689f0a3 by Zackery Spytz in branch 'master':
bpo-41252: Fix incorrect refcounting in _ssl.c's _servername_callback() (GH-21407)
https://github.com/python/cpython/commit/ee96f32ca24779656d3c8736d26671fc3689f0a3
msg373391 - (view) Author: miss-islington (miss-islington) Date: 2020-07-09 10:15
New changeset 54babbe976531d4d1c21ea415f71e7c6846e15bc by Miss Islington (bot) in branch '3.8':
bpo-41252: Fix incorrect refcounting in _ssl.c's _servername_callback() (GH-21407)
https://github.com/python/cpython/commit/54babbe976531d4d1c21ea415f71e7c6846e15bc
msg373392 - (view) Author: miss-islington (miss-islington) Date: 2020-07-09 10:18
New changeset 90584c02b4dcfc087bee5e4131b7ba72b669d58a by Miss Islington (bot) in branch '3.9':
bpo-41252: Fix incorrect refcounting in _ssl.c's _servername_callback() (GH-21407)
https://github.com/python/cpython/commit/90584c02b4dcfc087bee5e4131b7ba72b669d58a
msg373393 - (view) Author: Christian Heimes (christian.heimes) * (Python committer) Date: 2020-07-09 10:27
Thanks!
History
Date User Action Args
2022-04-11 14:59:33adminsetgithub: 85424
2020-07-09 10:27:55christian.heimessetstatus: open -> closed
resolution: fixed
messages: + msg373393

stage: patch review -> resolved
2020-07-09 10:18:33miss-islingtonsetmessages: + msg373392
2020-07-09 10:15:40miss-islingtonsetmessages: + msg373391
2020-07-09 10:00:50miss-islingtonsetpull_requests: + pull_request20560
2020-07-09 10:00:42miss-islingtonsetpull_requests: + pull_request20559
2020-07-09 10:00:29miss-islingtonsetnosy: + miss-islington
messages: + msg373389
2020-07-09 03:56:24ZackerySpytzsetkeywords: + patch
stage: patch review
pull_requests: + pull_request20557
2020-07-09 03:53:04ZackerySpytzcreate