bpo-41252: Fix incorrect refcounting in _ssl.c's _servername_callback() (GH-21407) (cherry picked from commit ee96f32ca24779656d3c8736d26671fc3689f0a3)

Co-authored-by: Zackery Spytz <zspytz@gmail.com>